--- a/in/bibtex/charnets.bib
+++ b/in/bibtex/charnets.bib
@@ -194,6 +194,18 @@
   url       = {https://books.google.fr/books?id=RauhQgAACAAJ},
 }
 
+@Article{Abry2022,
+  author    = {Abry, P. and Bastidon, C. and Borgnat, P. and Jensen, P. and Parent, A.},
+  title     = {The Contours of a Cliophysics. How Can Econophysics Enrich Cliometrics? Case Studies in Debt Issues and Global Capital Markets},
+  journal   = {Frontiers in Physics},
+  year      = {2022},
+  volume    = {10},
+  pages     = {894400},
+  doi       = {10.3389/fphy.2022.894400},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @InProceedings{Abu-Jbara2011,
   author    = {Abu-Jbara, A. and Radev, D.},
   title     = {Coherent citation-based summarization of scientific papers},
@@ -1225,6 +1237,18 @@
   doi       = {10.1145/2470654.2470724},
   owner     = {Vincent},
   timestamp = {2020.08.11},
+}
+
+@Article{Alstola2019,
+  author    = {Alstola, T. and Zaia, S. and Sahala, A. and Jauhiainen, H. and Svärd, S. and Lindén, K.},
+  title     = {Aššur and His Friends: A Statistical Analysis of Neo-Assyrian Texts},
+  journal   = {Journal of Cuneiform Studies},
+  year      = {2019},
+  volume    = {71},
+  pages     = {159-180},
+  doi       = {10.1086/703859},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Alstott2014,
@@ -2431,6 +2455,18 @@
   timestamp = {2019.04.01},
 }
 
+@Book{Bain1981,
+  title     = {Masters, Servants, and Orders in Greek Tragedy: A Study of Some Aspects of Dramatic Technique and Convention},
+  publisher = {Manchester University Press.},
+  year      = {1981},
+  author    = {Bain, D.},
+  volume    = {26},
+  series    = {Publications of the Faculty of Arts of the University of Manchester},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://books.google.fr/books/?id=1jG8AAAAIAAJ},
+}
+
 @Article{Baixeries2013,
   author    = {Baixeries, J. and Elvevåg, B. and Ferrer-i-Cancho, R.},
   title     = {The Evolution of the Exponent of Zipf's Law in Language Ontogeny},
@@ -3177,6 +3213,39 @@
   url       = {https://gephi.org/publications/gephi-bastian-feb09.pdf},
 }
 
+@TechReport{Bastidon2019,
+  author      = {Bastidon, C. and Bordo, M. and Parent, A. and Weidenmier, M.},
+  title       = {Towards an Unstable Hook: The Evolution of Stock Market Integration Since 1913},
+  institution = {NBER Working Papers},
+  year        = {2019},
+  doi         = {10.3386/w26166},
+  owner       = {Vincent},
+  timestamp   = {2022.08.31},
+}
+
+@Article{Bastidon2020,
+  author    = {Bastidon, C. and Parent, A. and Jensen, P. and Abry, P. and Borgnat, P.},
+  title     = {Graph-based era segmentation of international financial integration},
+  journal   = {Physica A},
+  year      = {2020},
+  volume    = {539},
+  pages     = {122877},
+  doi       = {10.1016/j.physa.2019.122877},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
+@Article{Bastidon2022,
+  author    = {Bastidon, C. and Parent, A.},
+  title     = {Cliometrics of world stock markets evolving networks},
+  journal   = {Annals of Operations Research},
+  year      = {2022},
+  volume    = {in press},
+  doi       = {10.1007/s10479-022-04564-z},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @Article{Batagelj1998,
   author    = {Batagelj, V. and Mrvar, A.},
   title     = {Pajek - Program for large network analysis},
@@ -3275,6 +3344,16 @@
   timestamp = {2020.12.12},
 }
 
+@Book{Bates1998,
+  title     = {Analytic Narratives},
+  publisher = {Princeton University Press.},
+  year      = {1998},
+  author    = {Bates, R. H. and Greif, A. and Levi, M. and Rosenthal, J.-L. and Weingast, B. R.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://press.princeton.edu/books/paperback/9780691001296/analytic-narratives},
+}
+
 @InProceedings{Battaglino2014,
   author    = {Battaglino, C. and Damiano, R.},
   title     = {A character model with moral emotions: Preliminary evaluation},
@@ -3284,6 +3363,42 @@
   doi       = {10.4230/OASIcs.CMN.2014.24},
   owner     = {Vincent},
   timestamp = {2021.12.15},
+}
+
+@Article{Battigalli2009,
+  author    = {Battigalli, P. and Dufwenberg, M.},
+  title     = {Dynamic psychological games},
+  journal   = {Journal of Economic Theory},
+  year      = {2009},
+  volume    = {144},
+  number    = {1},
+  pages     = {1-35},
+  doi       = {10.1016/j.jet.2008.01.004},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
+@Article{Battigalli2019,
+  author    = {Battigalli, P. and Corrao, R. and Dufwenberg, M.},
+  title     = {Incorporating belief-dependent motivation in games},
+  journal   = {Journal of Economic Behavior {\&} Organization},
+  year      = {2019},
+  volume    = {167},
+  pages     = {185-218},
+  doi       = {10.1016/j.jebo.2019.04.009},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
+@TechReport{Battigalli2020,
+  author      = {Battigalli, P. and Dufwenberg, M.},
+  title       = {Belief-Dependent Motivations and Psychological Game Theory},
+  institution = {University of Bocconi},
+  year        = {2020},
+  number      = {CESifo Working Paper No. 8285},
+  doi         = {10.2139/ssrn.3598771},
+  owner       = {Vincent},
+  timestamp   = {2022.08.31},
 }
 
 @Article{Bauer2012,
@@ -4147,6 +4262,19 @@
   doi       = {10.4324/9780203820551},
   owner     = {Vincent},
   timestamp = {2021.09.16},
+}
+
+@Article{Bharadwaj2017,
+  author    = {Bharadwaj, N. and Noble, C. H. and Tower, A. and Smith, L. M. and Dong, Y.},
+  title     = {Predicting Innovation Success in the Motion Picture Industry: The Influence of Multiple Quality Signals},
+  journal   = {Journal of Product Innovation Management},
+  year      = {2017},
+  volume    = {34},
+  number    = {5},
+  pages     = {659-680},
+  doi       = {10.1111/jpim.12404},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Bhat2014a,
@@ -5353,6 +5481,19 @@
   url       = {http://ucrel.lancs.ac.uk/publications/CL2007/paper/92_Paper.pdf},
 }
 
+@Article{Borwein2000,
+  author    = {Borwein, D. and Borwein, J. M. and Maréchal, P.},
+  title     = {Surprise Maximization},
+  journal   = {American Mathematical Monthly},
+  year      = {2000},
+  volume    = {107},
+  number    = {6},
+  pages     = {517-527},
+  doi       = {10.1080/00029890.2000.12005231},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @InCollection{Borza2019,
   author    = {Borza, C.},
   title     = {How to Populate a Country. A Quantitative Analysis of the Rural Novel from Romania (1900-2000)},
@@ -5706,6 +5847,29 @@
   doi       = {10.18653/v1/2021.findings-emnlp.150},
   owner     = {Vincent},
   timestamp = {2022.06.28},
+}
+
+@Article{Brams1994,
+  author    = {Brams, S. J.},
+  title     = {Game Theory and Literature},
+  journal   = {Games and Economic Behavior},
+  year      = {1994},
+  volume    = {6},
+  number    = {1},
+  pages     = {32-54},
+  doi       = {10.1006/game.1994.1002},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
+@Book{Brams2011,
+  title     = {Game Theory and the Humanities: Bridging Two Worlds},
+  publisher = {MIT Press},
+  year      = {2011},
+  author    = {Brams, S. J.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.jstor.org/stable/j.ctt5hhj4n},
 }
 
 @InProceedings{Bramsen2011,
@@ -6654,6 +6818,20 @@
   doi       = {10.1007/b97636},
   owner     = {Vincent},
   timestamp = {2019.04.05},
+}
+
+@InCollection{Burns2019,
+  author    = {Burns, P. J.},
+  title     = {Building a Text Analysis Pipeline for Classical Languages},
+  booktitle = {Digital Classical Philology},
+  publisher = {De Gruyter Saur},
+  year      = {2019},
+  volume    = {10},
+  series    = {Age of Access? Grundfragen der Informationsgesellschaft},
+  pages     = {159-176},
+  doi       = {10.1515/9783110599572-010},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @InCollection{Burrow1997,
@@ -8942,6 +9120,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.jstor.org/stable/25501865},
 }
 
+@Book{Chwe2014,
+  title     = {Jane Austen, Game Theorist.},
+  publisher = {Princeton University Press},
+  year      = {2014},
+  author    = {Chwe, M. S.-Y.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://press.princeton.edu/books/hardcover/9780691155760/jane-austen-game-theorist},
+}
+
 @Article{Chyrun2016,
   author    = {Chyrun, L. and Vysotska, V. and Kozak, I.},
   title     = {Informational resources processing intellectual systems with textual commercial content linguistic analysis usage constructional means and tools development},
@@ -9034,6 +9222,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.3389/fpsyg.2016.01753},
   owner     = {Vincent},
   timestamp = {2018.05.24},
+}
+
+@InCollection{Citti1988,
+  author    = {Citti, V.},
+  title     = {The Ideology of Metics in Attic Tragedy},
+  booktitle = {Forms of Control and Subordination in Antiquity},
+  publisher = {Society for Studies on Resistance Movements in Antiquity},
+  year      = {1988},
+  pages     = {456-464},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://brill.com/view/title/1076?language=en},
 }
 
 @Article{Clark1999,
@@ -9804,6 +10004,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2010.10.05},
 }
 
+@Article{Corvisier1986,
+  author    = {Corvisier, J.-N.},
+  title     = {La vieillesse en Grèce ancienne d’Homère à l’époque hellénistique},
+  journal   = {Annales de démographie historique},
+  year      = {1986},
+  volume    = {1985},
+  number    = {1},
+  pages     = {53-70},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.persee.fr/doc/adh_0066-2062_1986_num_1985_1_1622},
+}
+
 @InProceedings{Coscia2019a,
   author        = {Coscia , M.},
   title         = {Discovering Communities of Community Discovery},
@@ -9923,6 +10136,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.29},
 }
 
+@Article{Cowley2001,
+  author    = {Cowley, C.},
+  title     = {Moral Dilemmas in Greek Tragedies: A Discussion of Aeschylus's Agamemnon and Sophokles's Antigone},
+  journal   = {Etica \& Politica},
+  year      = {2001},
+  volume    = {3},
+  pages     = {1},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.openstarts.units.it/handle/10077/5612},
+}
+
 @Article{Cox1972,
   author    = {Cox, D. R.},
   title     = {Regression Models and Life-Tables},
@@ -9971,6 +10196,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.09},
   url       = {http://www.dlib.org/dlib/march06/crane/03crane.html},
+}
+
+@Article{Crettez2018,
+  author    = {Crettez, B. and Deloche, R.},
+  title     = {An analytic narrative of Caesar's death: Suicide or not? That is the question},
+  journal   = {Rationality and Society},
+  year      = {2018},
+  volume    = {30},
+  number    = {3},
+  pages     = {332-349},
+  doi       = {10.1177/1043463118759669},
+  timestamp = {2022.08.31},
 }
 
 @Article{Crick1983,
@@ -10418,6 +10655,17 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://global.oup.com/academic/product/the-physiology-of-the-novel-9780199208968},
 }
 
+@Article{Damet2012,
+  author    = {Damet, A.},
+  title     = {La domination masculine dans l'Athènes classique et sa remise en cause dans les crises intrafamiliales},
+  journal   = {Siècles},
+  year      = {2012},
+  number    = {35-36},
+  doi       = {10.4000/siecles.1503},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @InProceedings{Damljanovic2012,
   author    = {Damljanovic, D. and Bontcheva, K.},
   title     = {Named entity disambiguation using linked data},
@@ -10580,6 +10828,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp     = {2018.11.17},
 }
 
+@Book{DarcusSullivan1995,
+  title     = {Psychological and Ethical Ideas: What Early Greeks Say},
+  publisher = {Brill},
+  year      = {1995},
+  author    = {Darcus Sullivan, S.},
+  volume    = {144},
+  series    = {Mnemosyne: Bibliotheca Classica Batava},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://brill.com/view/title/1722},
+}
+
 @Article{DArgembeau2004,
   author    = {D'Argembeau, A. and Van der Linden, M.},
   title     = {Phenomenal characteristics associated with projecting oneself back into the past and forward into the future: Influence of valence and temporal distance},
@@ -10682,6 +10942,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url       = {https://www.aclweb.org/anthology/P07-1033/},
 }
 
+@Article{Davey1984,
+  author    = {Davey, L. A.},
+  title     = {Communication and the game of theatre},
+  journal   = {Poetics},
+  year      = {1984},
+  volume    = {13},
+  number    = {1-2},
+  pages     = {5-15},
+  doi       = {10.1016/0304-422x(84)90027-5},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @Article{Davidsen2002,
   author    = {Davidsen, J. and Ebel, H. and Bornholdt, S.},
   title     = {Emergence of a Small World from Local Interactions: Modeling Acquaintance Networks},
@@ -10767,6 +11040,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2020.03.15},
   url       = {https://www.aclweb.org/anthology/L04-1381/},
+}
+
+@InCollection{Debnar2005,
+  author    = {Debnar, P.},
+  title     = {Fifth-Century Athenian History and Tragedy},
+  booktitle = {A Companion to Greek Tragedy},
+  publisher = {Blackwell Publishing},
+  year      = {2005},
+  chapter   = {1},
+  pages     = {1-22},
+  doi       = {10.1002/9780470996676.ch1},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{DeCastro1999,
@@ -11092,6 +11378,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   url         = {https://www.proquest.com/openview/e63aee681fc4260b7dbc55a118978676/1y},
 }
 
+@Book{Demont1996,
+  title     = {Introduction au théâtre grec antique},
+  publisher = {Livre de poche},
+  year      = {1996},
+  author    = {Demont, P. and Lebeau, A.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.livredepoche.com/livre/introduction-au-theatre-grec-antique-9782253905257},
+}
+
 @Article{Dempster1977,
   author    = {Dempster, A. P. and Laird, N. M. and Rubin, D. B.},
   title     = {Maximum Likelihood from Incomplete Data Via the {EM} Algorithm},
@@ -11103,6 +11399,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1111/j.2517-6161.1977.tb01600.x},
   owner     = {Vincent},
   timestamp = {2019.04.11},
+}
+
+@Article{Deng2011,
+  author    = {Deng, W. and Li, W. and Cai, X. and Wanga, Q. A.},
+  title     = {The exponential degree distribution in complex networks: Non-equilibrium network theory, numerical simulation and empirical data},
+  journal   = {Physica A},
+  year      = {2011},
+  volume    = {390},
+  number    = {8},
+  pages     = {1481-1485},
+  doi       = {10.1016/j.physa.2010.12.029},
+  owner     = {Vincent},
+  timestamp = {2011.01.20},
 }
 
 @Book{Denis2001,
@@ -11150,6 +11459,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   doi       = {10.1075/upal.35.20noo},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Derrick2014,
+  author    = {Derrick, F. W. and Williams, N. A. and Scott, C. E.},
+  title     = {A Two-Stage Proxy Variable Approach to Estimating Movie Box Office Receipts},
+  journal   = {Journal of Cultural Economics},
+  year      = {2014},
+  volume    = {38},
+  number    = {2},
+  pages     = {173-189},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.jstor.org/stable/44289287},
 }
 
 @InCollection{Derrida1992,
@@ -11541,6 +11863,16 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.03.25},
   url       = {http://www.lrec-conf.org/proceedings/lrec2004/pdf/5.pdf},
+}
+
+@Book{Dodds1951,
+  title     = {The Greeks and the Irrational},
+  publisher = {University of California Press},
+  year      = {1951},
+  author    = {Dodds, E. R.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.ucpress.edu/book/9780520242302/the-greeks-and-the-irrational},
 }
 
 @Article{Dodds2011,
@@ -12545,6 +12877,45 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp    = {2021.02.28},
 }
 
+@Article{Duplouy2005,
+  author    = {Duplouy, A.},
+  title     = {Pouvoir ou prestige ? Apports et limites de l’histoire politique à la définition des élites grecques},
+  journal   = {Revue belge de philologie et d’histoire},
+  year      = {2005},
+  volume    = {83},
+  number    = {1},
+  pages     = {5-23},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.persee.fr/doc/rbph_0035-0818_2005_num_83_1_4907},
+}
+
+@InCollection{Duplouy2007,
+  author    = {Duplouy, A.},
+  title     = {La cité et ses élites : modes de reconnaissance sociale et mentalité agonistique en Grèce archaïque et classique},
+  booktitle = {Aristocratie antique : modèles et exemplarité sociale},
+  publisher = {Éditions universitaires de Dijon},
+  year      = {2007},
+  pages     = {57-77},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://halshs.archives-ouvertes.fr/halshs-00583527/document},
+}
+
+@InCollection{Duplouy2014,
+  author    = {Duplouy, A.},
+  title     = {Le prestige des citoyens : Agôn et citoyenneté dans la Grèce archaïque},
+  booktitle = {Le prestige : autour des formes de la différenciation sociale},
+  publisher = {Éditions de Boccard},
+  year      = {2014},
+  volume    = {10},
+  series    = {Colloques de la Maison de l’archéologie et de l’ethnologie},
+  pages     = {67-76},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://hal-paris1.archives-ouvertes.fr/hal-02404434/document},
+}
+
 @InProceedings{Durak2013,
   author    = {Durak, N. and Kolda, T. G. and Pinar, A. and Seshadhri, C.},
   title     = {A scalable null model for directed graphs matching all degree distributions: In, out, and reciprocal},
@@ -13315,6 +13686,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2019.04.13},
   url       = {https://www.semanticscholar.org/paper/Detecting-Story-Analogies-from-Annotations-of-Time%2C-Elson/5780f7a71f4bd2816508d7031da9aa7dfd748e14},
+}
+
+@Article{Ely2015,
+  author    = {Ely, J. and Frankel, A. and Kamenica, E.},
+  title     = {Suspense and Surprise},
+  journal   = {Journal of Political Economy},
+  year      = {2015},
+  volume    = {123},
+  number    = {1},
+  pages     = {215-260},
+  doi       = {10.1086/677350},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Elzen2016,
@@ -16195,6 +16579,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   timestamp = {2019.03.22},
 }
 
+@Article{Geanakoplos1989,
+  author    = {Geanakoplos, J. and Pearce, D. and Stacchetti, E.},
+  title     = {Psychological games and sequential rationality},
+  journal   = {Games and Economic Behavior},
+  year      = {1989},
+  volume    = {1},
+  number    = {1},
+  pages     = {60-79},
+  doi       = {10.1016/0899-8256(89)90005-5},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @InProceedings{Gehrmann2021,
   author    = {Gehrmann, S. and Adewumi, T. and Aggarwal, K. and Ammanamanchi, P. S. and Aremu, A. and Bosselut, A. and Chandu, K. R. and Clinciu, M.-A. and Das, D. and Dhole, K. and Du, W. and Durmus, E. and Dušek, O. and Chinenye Emezue, C. and Gangal, V. and Garbacea, C. and Hashimoto, T. and Hou, Y. and Jernite, Y. and Jhamtani, H. and Ji, Y. and Jolly, S. and Kale, M. and Kumar, D. and Ladhak, F. and Madaan, A. and Maddela, M. and Mahajan, K. and Mahamood, S. and Majumder, B. P. and Martins, P. H. and McMillan-Major, A. and Mille, S. and van Miltenburg, E. and Nadeem, M. and Narayan, S. and Nikolaev, V. and Niyongabo Rubungo, A. and Osei, S. and Parikh, A. and Perez-Beltrachini, L. and Rao, N. R. and Raunak, V. and Rodriguez, J. D. and Santhanam, S. and Sedoc, J. and Sellam, T. and Shaikh, S. and Shimorina, A. and Sobrevilla Cabezudo, M. .A and Strobelt, H. and Subramani, N. and Xu, W. and Yang, D. and Yerukola, A. and Zhou, J.},
   title     = {The {GEM} Benchmark: Natural Language Generation, its Evaluation and Metrics},
@@ -16528,6 +16925,19 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner     = {Vincent},
   timestamp = {2021.09.22},
   url       = {https://books.google.fr/books?id=kP0IAQAAIAAJ},
+}
+
+@Article{Gilboa1988,
+  author    = {Gilboa, I. and Schmeidler, D.},
+  title     = {Information dependent games},
+  journal   = {Economics Letters},
+  year      = {1988},
+  volume    = {27},
+  number    = {3},
+  pages     = {215-221},
+  doi       = {10.1016/0165-1765(88)90173-5},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Gildea2002,
@@ -17114,6 +17524,18 @@ arXiv: https://arxiv.org/abs/1709.07604},
   owner       = {Vincent},
   timestamp   = {2021.12.27},
   url         = {http://www.nielsen.com/us/en/insights/news/2014/engaging-the-evolving-hispanic-consumers.html},
+}
+
+@InCollection{Gonzalez-Feliu2016,
+  author    = {Gonzalez-Feliu, J. and Parent, A.},
+  title     = {Clio-Combinatorics: A Novel Framework to Analyze Military Logistics Choices Using Operations Research Techniques},
+  booktitle = {Handbook of Research on Military, Aeronautical, and Maritime Logistics and Operations},
+  publisher = {IGI Global},
+  year      = {2016},
+  pages     = {79-101},
+  doi       = {10.4018/978-1-4666-9779-9.ch005},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Book{Goodacre2001,
@@ -20133,6 +20555,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.06.28},
 }
 
+@Article{Hofmann-Stoelting2017,
+  author    = {Hofmann-Stölting, C. and Clement, M. and Wu, S. and Albers, S.},
+  title     = {Sales Forecasting of New Entertainment Media Products},
+  journal   = {Journal of Media Economics},
+  year      = {2017},
+  volume    = {30},
+  number    = {3},
+  pages     = {143-171},
+  doi       = {10.1080/08997764.2018.1452746},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @InCollection{Hogg2012,
   author    = {Hogg, M. A.},
   title     = {Social identity and the psychology of groups},
@@ -20196,6 +20631,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.06},
   url       = {https://books.google.fr/books?id=RZ7p__t5l_QC},
+}
+
+@InCollection{Holler2007,
+  author    = {Holler, M. J.},
+  title     = {The Machiavelli Program and the Dirty Hands Problem},
+  booktitle = {Public Economics and Public Choice},
+  publisher = {Springer},
+  year      = {2007},
+  chapter   = {3},
+  pages     = {39-62},
+  doi       = {10.1007/978-3-540-72782-8_3},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Holm1994,
@@ -22918,6 +23366,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.3115/1219044.1219066},
   owner     = {Vincent},
   timestamp = {2019.04.09},
+}
+
+@Book{Kamen2013,
+  title     = {Status in Classical Athens},
+  publisher = {Princeton University Press},
+  year      = {2013},
+  author    = {Kamen, D.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://press.princeton.edu/books/hardcover/9780691138138/status-in-classical-athens},
 }
 
 @Electronic{Kaminski2012,
@@ -25947,6 +26405,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://ijoc.org/index.php/ijoc/article/view/1094},
 }
 
+@Article{Lauwers2015,
+  author    = {Lauwers, J. and Deneire, T. and Eelbode, D.},
+  title     = {The question of literary quality},
+  journal   = {Scientific Study of Literature},
+  year      = {2015},
+  volume    = {5},
+  number    = {1},
+  pages     = {3-22},
+  doi       = {10.1075/ssol.5.1.01lau},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @Article{Lauzen2005,
   author    = {Lauzen, M. M. and Dozier, D. M.},
   title     = {Maintaining the Double Standard: Portrayals of Age and Gender in Popular Films},
@@ -26160,6 +26631,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2022.08.30},
   url       = {https://www.gutenberg.org/ebooks/5678},
+}
+
+@Article{Leavitt2011,
+  author    = {Leavitt, J. D. and Christenfeld, N. J. S.},
+  title     = {Story Spoilers Don't Spoil Stories},
+  journal   = {Psychological Science},
+  year      = {2011},
+  volume    = {22},
+  number    = {9},
+  pages     = {1152-1154},
+  doi       = {10.1177/0956797611417007},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Ledger1994,
@@ -26895,6 +27379,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://books.google.fr/books?id=Iy7oAAAAIAAJ},
 }
 
+@InCollection{Levi2004,
+  author    = {Levi, M.},
+  title     = {An analytic narrative approach to puzzles and problems},
+  booktitle = {Problems and Methods in the Study of Politics},
+  publisher = {Cambridge University Press},
+  year      = {2004},
+  pages     = {201-226},
+  doi       = {10.1017/cbo9780511492174.010},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @InProceedings{Levi2015,
   author    = {Levi, G. and Hassncer, T.},
   title     = {Age and gender classification using convolutional neural networks},
@@ -27105,6 +27601,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.18653/v1/2020.acl-main.703},
   owner     = {Vincent},
   timestamp = {2020.12.15},
+}
+
+@Article{Ley1988,
+  author    = {de Ley, H.},
+  title     = {The Name of the Game: Applying Game Theory in Literature},
+  journal   = {SubStance},
+  year      = {1988},
+  volume    = {17},
+  number    = {1},
+  pages     = {33},
+  doi       = {10.2307/3685212},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Ley2009,
@@ -30311,6 +30820,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2021.12.15},
 }
 
+@Book{Mastronarde1979,
+  title     = {Contact and Discontinuity: Some Conventions of Speech and Action on the Greek Tragic Stage},
+  publisher = {University of California Press},
+  year      = {1979},
+  author    = {Mastronarde, D. J.},
+  volume    = {21},
+  series    = {California Classical Studies},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://escholarship.org/uc/item/21k0q422},
+}
+
 @Article{Masucci2006,
   author    = {Masucci, A. P. and Rodgers, G. J.},
   title     = {Network properties of written human language},
@@ -30933,6 +31454,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.12.12},
 }
 
+@Article{McKenzie2022,
+  author    = {McKenzie, J.},
+  title     = {The economics of movies (revisited): A survey of recent literature},
+  journal   = {Journal of Economic Surveys},
+  year      = {2022},
+  volume    = {in press},
+  doi       = {10.1111/joes.12498},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @Book{McKenzieAlexander2007,
   title     = {The Structural Evolution of Morality},
   publisher = {Cambridge University Press},
@@ -31356,6 +31888,42 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.28},
 }
 
+@Article{Miall1989,
+  author    = {Miall, D. S.},
+  title     = {Beyond the schema given: Affective comprehension of literary narratives},
+  journal   = {Cognition \& Emotion},
+  year      = {1989},
+  volume    = {3},
+  number    = {1},
+  pages     = {55-78},
+  doi       = {10.1080/02699938908415236},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
+@TechReport{Miall1998,
+  author      = {Miall, D. S.},
+  title       = {An Evolutionary Approach to Literary Reading.},
+  institution = {University of Alberta},
+  year        = {1998},
+  owner       = {Vincent},
+  timestamp   = {2022.08.31},
+  url         = {https://sites.ualberta.ca/~dmiall/reading/evolut.htm},
+}
+
+@Article{Miall2006,
+  author    = {Miall, D. S.},
+  title     = {Empirical Approaches to Studying Literary Readers: The State of the Discipline},
+  journal   = {Book History},
+  year      = {2006},
+  volume    = {9},
+  number    = {1)},
+  pages     = {291-311},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.jstor.org/stable/30227393},
+}
+
 @Article{Michel2010,
   author    = {Michel, J.-B. and Shen, Y. K. and Aiden, A. P. and Veres, A. and Gray, M. K. and Pickett, J. P. and Hoiberg, D. and Clancy, D. and Norvig, P. and Orwant, J. and Pinker, S. and Nowak, M. A. and Aiden, E. L.},
   title     = {Quantitative Analysis of Culture Using Millions of Digitized Books},
@@ -31388,6 +31956,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1017/CBO9780511976247},
   owner     = {Vincent},
   timestamp = {2019.04.10},
+}
+
+@Article{Mikalson1989,
+  author    = {Mikalson, J. D.},
+  title     = {Unanswered prayers in Greek Tragedy},
+  journal   = {Journal of Hellenic Studies},
+  year      = {1989},
+  volume    = {109},
+  pages     = {81-98},
+  doi       = {10.2307/632034},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @InProceedings{Mikolov2013,
@@ -32107,6 +32687,32 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2019.03.27},
 }
 
+@InProceedings{Mongin2016,
+  author    = {Mongin, P.},
+  title     = {What Are Analytic Narratives?},
+  booktitle = {7th Workshop on Computational Models of Narrative},
+  year      = {2016},
+  volume    = {53},
+  series    = {OpenAccess Series in Informatics},
+  pages     = {13},
+  doi       = {10.4230/OASIcs.CMN.2016.13},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
+@Article{Mongin2017,
+  author    = {Mongin, P.},
+  title     = {A game-theoretic analysis of the Waterloo campaign and some comments on the analytic narrative project},
+  journal   = {Cliometrica},
+  year      = {2017},
+  volume    = {12},
+  number    = {3},
+  pages     = {451-480},
+  doi       = {10.1007/s11698-017-0162-0},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @Article{Montanari2010,
   author    = {Montanari, A. and Saberi, A.},
   title     = {The spread of innovations in social networks},
@@ -32734,15 +33340,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
 }
 
 @Article{Mourchid2019a,
-  author    = {Mourchid, Y. and Renoust, B. and Roupin, O. and Van, L. and Cherifi, H. and El Hassouni, M.},
-  title     = {Movienet: A Movie Multilayer Network Model using Visual and Textual Semantic Cues},
-  journal   = {arXiv},
-  year      = {2019},
-  volume    = {cs.LG},
-  pages     = {1910.09368},
-  owner     = {Vincent},
-  timestamp = {2019.10.26},
-  url       = {https://arxiv.org/abs/1910.09368},
+  author        = {Mourchid, Y. and Renoust, B. and Roupin, O. and Van, L. and Cherifi, H. and El Hassouni, M.},
+  title         = {Movienet: A Movie Multilayer Network Model using Visual and Textual Semantic Cues},
+  journal       = {Applied Network Science},
+  year          = {2019},
+  volume        = {4},
+  pages         = {121},
+  __markedentry = {[Vincent:]},
+  doi           = {10.1007/s41109-019-0226-0},
+  groups        = {Cinema (Arts)},
+  owner         = {Vincent},
+  timestamp     = {2019.10.26},
 }
 
 @InCollection{Mowshowitz2009,
@@ -32837,6 +33445,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1080/17450910802295179},
   owner     = {Vincent},
   timestamp = {2021.06.21},
+}
+
+@InProceedings{Mugelli2017,
+  author    = {Mugelli, G. and Bellandi, A. and Boschetti, F. and Khan, F.},
+  title     = {Designing an Ontology for the Study of Ritual in Ancient Greek Tragedy},
+  booktitle = {Language, Ontology, Terminology and Knowledge Structures},
+  year      = {2017},
+  pages     = {96-105},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://aclanthology.org/W17-7011.pdf},
 }
 
 @InProceedings{Muhuri2016,
@@ -35920,6 +36539,18 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {https://arxiv.org/abs/1009.5972},
 }
 
+@InCollection{Penard2008,
+  author    = {Pénard, T.},
+  title     = {Game Theory and Institutions},
+  booktitle = {New Institutional Economics: A Guidebook},
+  publisher = {Cambridge University Press},
+  year      = {2008},
+  pages     = {158-180},
+  doi       = {10.1017/cbo9780511754043.011},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+}
+
 @InProceedings{Penas2010,
   author    = {Peñas, A. and Hovy, E.},
   title     = {Filling knowledge gaps in text for machine reading},
@@ -36505,6 +37136,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.07.25},
 }
 
+@Article{Pillet2007,
+  author    = {Pillet, S.},
+  title     = {When Strategic Mistakes Save the Play: Application of Game Theory in Sartre's Dirty Hands},
+  journal   = {Atenea},
+  year      = {2007},
+  volume    = {27},
+  number    = {2},
+  pages     = {109-121},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://go.gale.com/ps/i.do?id=GALE%7CA183554034},
+}
+
 @InProceedings{Pilszy2009,
   author    = {Pilászy, I. and Tikk, D.},
   title     = {Recommending new movies},
@@ -36823,6 +37467,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2016.10.10},
   url       = {https://arxiv.org/abs/1610.01720},
+}
+
+@Article{Popovici1984,
+  author    = {Popovici, V.},
+  title     = {Is the stage-audience relationship a form of dialogue?},
+  journal   = {Poetics},
+  year      = {1984},
+  volume    = {13},
+  number    = {1-2},
+  pages     = {111-118},
+  doi       = {10.1016/0304-422x(84)90034-2},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Poppe2009,
@@ -38073,6 +38730,19 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.1063/1.1996475},
   owner     = {Vincent},
   timestamp = {2021.09.21},
+}
+
+@Article{Reeb2009,
+  author    = {Reeb, T.},
+  title     = {Playing Games and 'Making' A Novel: Mark Twain and Game Theory in Adventures of Huckleberry Finn},
+  journal   = {Mark Twain Annual},
+  year      = {2009},
+  volume    = {7},
+  number    = {1},
+  pages     = {97-116},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.jstor.org/stable/41582257},
 }
 
 @Book{Reed2004,
@@ -40137,6 +40807,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   timestamp = {2020.01.05},
 }
 
+@Book{Said1990,
+  title     = {A Short History of Greek Literature},
+  publisher = {Routledge},
+  year      = {1990},
+  author    = {Saïd, S. and Trédé, M.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://books.google.fr/books/?id=SyWmiEXikvUC},
+}
+
 @Book{Said2014,
   title     = {Orientalism},
   publisher = {Knopf Doubleday Publishing Group},
@@ -41577,6 +42257,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   url       = {http://cup.columbia.edu/book/between-men/9780231176293},
 }
 
+@Book{Segal1986,
+  title     = {Interpreting Greek Tragedy: Myth, Poetry, Text},
+  publisher = {Cornell University Press},
+  year      = {1986},
+  author    = {Segal, C.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://www.jstor.org/stable/10.7591/j.ctvn96f6d},
+}
+
 @Article{Segel2010,
   author    = {Segel, E. and Heer, J.},
   title     = {Narrative Visualization: Telling Stories with Data},
@@ -41839,6 +42529,17 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2019.04.08},
   url       = {https://www.jstor.org/stable/24305538},
+}
+
+@Book{Sewell-Rutter2010,
+  title     = {Guilt by Descent: Moral Inheritance and Decision Making in Greek Tragedy},
+  publisher = {Oxford: Oxford University Press},
+  year      = {2010},
+  author    = {Sewell-Rutter, N. J.},
+  series    = {Oxford Classical Monographs},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://books.google.fr/?id=8NQzQwAACAAJ},
 }
 
 @Article{Shafie2015,
@@ -42903,6 +43604,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   doi       = {10.2307/2413122},
   owner     = {Vincent},
   timestamp = {2019.12.31},
+}
+
+@Book{Snell1953,
+  title     = {The Discovery of the Mind: The Greek Origins of European Thought},
+  publisher = {Harvard University Press},
+  year      = {1953},
+  author    = {Snell, B.},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
+  url       = {https://books.google.fr/books/?id=WJZfAAAAMAAJ},
 }
 
 @Book{Snijders1999,
@@ -47486,6 +48197,16 @@ Reddit page: https://www.reddit.com/r/dataisbeautiful/comments/5gfwzt/every_game
   owner     = {Vincent},
   timestamp = {2021.12.27},
   url       = {https://www.aaai.org/Library/ICWSM/icwsm15contents.php},
+}
+
+@Book{Wainwright_2016,
+  title     = {Game Theory and Postwar American Literature},
+  publisher = {Palgrave Macmillan},
+  year      = {2016},
+  author    = {Wainwright, M.},
+  doi       = {10.1007/978-1-137-60133-9},
+  owner     = {Vincent},
+  timestamp = {2022.08.31},
 }
 
 @Article{Wainwright2007,
